Fix sidebar home-active-overflow

--- a/src/assets/styles/cmps/Sidebar.scss
+++ b/src/assets/styles/cmps/Sidebar.scss
@@ -131,5 +131,11 @@
         .sidebar-toggle{
           display: flex;    
         }
+
+        .sidebar-item.active:nth-child(1) {
+          margin-right: 14px;
+          transition: margin-right .1s ease-in-out;
+        }
     }
+
 }
